tests/baselines/reference/jsdocTemplateTag5.errors.txt
tests/cases/conformance/jsdoc/a.js(18,21): error TS2339: Property '_map' does not exist on type '{ get(key: K): V; }'.
tests/cases/conformance/jsdoc/a.js(39,21): error TS2339: Property '_map' does not exist on type '{ get(key: K): V; }'.
tests/cases/conformance/jsdoc/a.js(61,21): error TS2339: Property '_map' does not exist on type '{ get(key: K): V; }'.


==== tests/cases/conformance/jsdoc/a.js (3 errors) ====
    /**
     * Should work for function declarations
     * @constructor
     * @template {string} K
     * @template V
     */
    function Multimap() {
        /** @type {Object<string, V>} TODO: Remove the prototype from the fresh object */
        this._map = {};
    };
    
    Multimap.prototype = {
        /**
         * @param {K} key the key ok
         * @returns {V} the value ok
         */
        get(key) {
            return this._map[key + ''];
                        ~~~~
!!! error TS2339: Property '_map' does not exist on type '{ get(key: K): V; }'.
        }
    }
    
    /**
     * Should work for initialisers too
     * @constructor
     * @template {string} K
     * @template V
     */
    var Multimap2 = function() {
        /** @type {Object<string, V>} TODO: Remove the prototype from the fresh object */
        this._map = {};
    };
    
    Multimap2.prototype = {
        /**
         * @param {K} key the key ok
         * @returns {V} the value ok
         */
        get(key) {
            return this._map[key + ''];
                        ~~~~
!!! error TS2339: Property '_map' does not exist on type '{ get(key: K): V; }'.
        }
    }
    
    var Ns = {};
    /**
     * Should work for expando-namespaced initialisers too
     * @constructor
     * @template {string} K
     * @template V
     */
    Ns.Multimap3 = function() {
        /** @type {Object<string, V>} TODO: Remove the prototype from the fresh object */
        this._map = {};
    };
    
    Ns.Multimap3.prototype = {
        /**
         * @param {K} key the key ok
         * @returns {V} the value ok
         */
        get(key) {
            return this._map[key + ''];
                        ~~~~
!!! error TS2339: Property '_map' does not exist on type '{ get(key: K): V; }'.
        }
    }
    
    